Inclusão dos membros

--- a/app/templates/app/cadastro_cursos.html
+++ b/app/templates/app/cadastro_cursos.html
@@ -12,5 +12,9 @@
           <tr><td>{{ curso.nome }}</td><td>{{ curso.periodo }}</td><td>{{ curso.instituicao }}</td></tr>
         {% endfor %}
 </table>
+<p>Rafael</p>
+<p>Douglas</p>
+<p>Kleber</p>
+<p>Karen</p>
 
 {% endblock %}
